--- a/css/styleMenu.css
+++ b/css/styleMenu.css
@@ -3,11 +3,11 @@
     padding: 0%;
 }
 body{
-    background-color: #0c0c0c;
+    background-image: url(https://images2.alphacoders.com/900/900075.png);
 }
 
 header{
-    background-color: white;
+    background-color: #0c0c0c;
     height: 80px;
 }
 #icon{
@@ -24,18 +24,17 @@ section{
     margin-top: 5%;
     border-style: solid;
     border-color: red;
-    background-color:#e5e7ea;
+    background-color:#0c0c0c;
     min-height: 700px;
     width: 80%;
 }
 
-#imagem{
-    width: 20%;
-    margin: 0 auto;
-    margin-top: 5%;
+h1{
+    color: white;
 }
 
-p{    
+p{  
+    color: white;  
     font-size: 32px
 }
 
@@ -44,6 +43,7 @@ p{
 }
 ul{
     padding: 3%;
+    color: white;
 }
 li{
     font-size: 38px;
