--- a/css/menuGames.css
+++ b/css/menuGames.css
@@ -37,6 +37,8 @@ body{
     background-color: transparent;
     color: white;
     padding: 2%;
+    padding-left: 10%;
+    padding-right: 10%;
     font-size: 15px;
     border-radius: 4px;
     border: 2px solid white;
