--- a/css/styleMenu.css
+++ b/css/styleMenu.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 *{
     margin: 0%;
     padding: 0%;
+    font-family: 'Roboto', sans-serif;
 }
 body{
     background-image: url(https://images2.alphacoders.com/900/900075.png);
