--- a/css/styleNoticias.css
+++ b/css/styleNoticias.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 *{
     margin: 0%;
     padding: 0%;
+    font-family: 'Roboto', sans-serif;
 }
 
 body{
@@ -15,7 +18,7 @@ section{
 }
 .imagem{
     float: left;
-    padding: 3%;
+    margin: 3%;
 }
 .texto{
     padding: 3%; 
