--- a/css/header.css
+++ b/css/header.css
@@ -1,27 +1,27 @@
 #a0{
     float: left;
-    margin-left: 5.6%;
+    margin-left: 5%;
     color: white;
     font-weight: normal;
 }
 
 #a1{
-    float: left;
-    margin-left: 18.34%;
+    padding-right: 10%;
+    padding-left: 5%;
     color: white;
     font-weight: normal;
 }
 
 #a2{
-    float: left;
-    margin-left: 18.34%;
+    padding-left: 10%;
+    padding-right: 5%;
     color: white;
     font-weight: normal;
 }
 
 #a3{
-    float: left;
-    margin-left: 18.34%;
+    float: right;
+    margin-right: 5%;
     color: white;
     font-weight: normal;
 }
