--- a/css/header.css
+++ b/css/header.css
@@ -20,6 +20,13 @@
 }
 
 #a3{
+    padding-left: 10%;
+    margin-right: 5%;
+    color: white;
+    font-weight: normal;
+}
+
+#a4{
     float: right;
     margin-right: 5%;
     color: white;
